# aaxconvert

./: .gitignore  README.md  pyproject.toml  run_tests.sh
src/AudioConvert/: cli.py  conversion.py
src/aaxconvert/: __init__.py  cli.py  conversion.py
src/tests/: test_cli.py  test_conversion.py
